--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "python.pythonPath": ".venv/bin/python3",
-    "python.linting.pylintPath": ".venv/bin/pylint",
-    "python.linting.mypyPath": ".venv/bin/mypy",
-    "python.testing.pytestPath": ".venv/bin/pytest",
+    "python.pythonPath": "python3",
+    "python.linting.pylintPath": "pylint",
+    "python.linting.mypyPath": "mypy",
+    "python.testing.pytestPath": "python3 -m pytest",
     "python.formatting.provider": "black",
     "python.sortImports.path": "isort",
     "editor.formatOnSave": true,
